Solution for assignment 3

--- a/Module3Assignment/index.html
+++ b/Module3Assignment/index.html
@@ -9,11 +9,74 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#dropdownMenuMobile" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Food, LLC</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="dropdownMenuMobile">
+          <ul class="nav navbar-nav visible-xs">
+            <li><a href="#">Beef</a></li>
+            <li><a href="#">Chicken</a></li>
+            <li><a href="#">Sushi</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    <h1 class="text-center">Our Menu</h1>
+
+    <div class="container-fluid" id="contentPane">
+      <div class="row">
+        <div class="col-xs-12">
+          <h3 class="text-center">Chicken</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat enim vel tellus pellentesque pulvinar. Aenean vulputate lectus vitae dolor rhoncus fringilla. Vestibulum dapibus odio at sapien tristique, in eleifend odio commodo. Mauris faucibus sit amet elit placerat condimentum. Aenean a purus dignissim, suscipit sem non, vestibulum magna. Quisque a porta sem. Integer tempor augue arcu, et sollicitudin purus maximus ut. Ut blandit erat in ligula ornare lobortis. Morbi blandit dolor in ante faucibus rutrum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elit enim, pellentesque eget accumsan quis, condimentum a lectus. Maecenas ultrices augue eget pulvinar molestie. Curabitur mattis rhoncus vehicula. Quisque condimentum tempor tortor vel maximus. Etiam suscipit sapien a purus consequat, at luctus magna elementum. Donec nec metus rhoncus, rutrum magna et, eleifend neque.<p>
+
+          <p>Vestibulum vel tempor mauris, eget auctor lorem. Nunc vulputate nunc get tristique tempus. Suspendisse malesuada vehicula sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque semper metus in eros scelerisque condimentum. Phasellus in erat faucibus enim aliquam mattis quis vitae dolor. Vestibulum pretium tempus mi non consectetur. Etiam consequat, quam ut blandit porta, ante dui tristique massa, eget porta purus lorem quis ex. Integer pretium at ipsum eget condimentum.</p>
+
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam sollicitudin posuere dolor. Sed in leo vestibulum, pulvinar tortor id, iaculis sapien. Sed vel vestibulum enim, eget venenatis eros. Morbi in sapien vel diam vehicula posuere. Integer iaculis nisi vitae tortor finibus, ac elementum erat congue. Nam interdum ipsum et ligula laoreet, vitae vulputate velit venenatis. Nam orci tortor, euismod at turpis et, aliquet scelerisque augue. Donec commodo erat orci, eu convallis est ultricies ac.</p>
+
+          <p>Mauris ut tellus commodo leo faucibus fringilla fringilla in eros. Cras fermentum metus non lectus hendrerit fringilla. Duis vitae urna vestibulum, pretium odio quis, varius odio. Suspendisse condimentum urna id rutrum euismod. Aenean vel erat ullamcorper, aliquet augue pretium, condimentum arcu. Curabitur hendrerit dapibus magna, et molestie ex. Mauris non sodales enim. Nunc accumsan maximus tincidunt. Aenean pellentesque, dui et luctus pulvinar, mi enim vehicula augue, sit amet fermentum lorem orci sit amet ligula. Aenean euismod magna et mi accumsan fermentum. Sed lectus lorem, tempus sit amet libero a, dignissim dapibus lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam dictum dui nec tortor sollicitudin elementum. Vivamus et urna a erat elementum pretium. </p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat enim vel tellus pellentesque pulvinar. Aenean vulputate lectus vitae dolor rhoncus fringilla. Vestibulum dapibus odio at sapien tristique, in eleifend odio commodo. Mauris faucibus sit amet elit placerat condimentum. Aenean a purus dignissim, suscipit sem non, vestibulum magna. Quisque a porta sem. Integer tempor augue arcu, et sollicitudin purus maximus ut. Ut blandit erat in ligula ornare lobortis. Morbi blandit dolor in ante faucibus rutrum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elit enim, pellentesque eget accumsan quis, condimentum a lectus. Maecenas ultrices augue eget pulvinar molestie. Curabitur mattis rhoncus vehicula. Quisque condimentum tempor tortor vel maximus. Etiam suscipit sapien a purus consequat, at luctus magna elementum. Donec nec metus rhoncus, rutrum magna et, eleifend neque.<p>
+
+          <p>Vestibulum vel tempor mauris, eget auctor lorem. Nunc vulputate nunc get tristique tempus. Suspendisse malesuada vehicula sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque semper metus in eros scelerisque condimentum. Phasellus in erat faucibus enim aliquam mattis quis vitae dolor. Vestibulum pretium tempus mi non consectetur. Etiam consequat, quam ut blandit porta, ante dui tristique massa, eget porta purus lorem quis ex. Integer pretium at ipsum eget condimentum.</p>
+
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam sollicitudin posuere dolor. Sed in leo vestibulum, pulvinar tortor id, iaculis sapien. Sed vel vestibulum enim, eget venenatis eros. Morbi in sapien vel diam vehicula posuere. Integer iaculis nisi vitae tortor finibus, ac elementum erat congue. Nam interdum ipsum et ligula laoreet, vitae vulputate velit venenatis. Nam orci tortor, euismod at turpis et, aliquet scelerisque augue. Donec commodo erat orci, eu convallis est ultricies ac.</p>
+
+          <p>Mauris ut tellus commodo leo faucibus fringilla fringilla in eros. Cras fermentum metus non lectus hendrerit fringilla. Duis vitae urna vestibulum, pretium odio quis, varius odio. Suspendisse condimentum urna id rutrum euismod. Aenean vel erat ullamcorper, aliquet augue pretium, condimentum arcu. Curabitur hendrerit dapibus magna, et molestie ex. Mauris non sodales enim. Nunc accumsan maximus tincidunt. Aenean pellentesque, dui et luctus pulvinar, mi enim vehicula augue, sit amet fermentum lorem orci sit amet ligula. Aenean euismod magna et mi accumsan fermentum. Sed lectus lorem, tempus sit amet libero a, dignissim dapibus lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam dictum dui nec tortor sollicitudin elementum. Vivamus et urna a erat elementum pretium. </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat enim vel tellus pellentesque pulvinar. Aenean vulputate lectus vitae dolor rhoncus fringilla. Vestibulum dapibus odio at sapien tristique, in eleifend odio commodo. Mauris faucibus sit amet elit placerat condimentum. Aenean a purus dignissim, suscipit sem non, vestibulum magna. Quisque a porta sem. Integer tempor augue arcu, et sollicitudin purus maximus ut. Ut blandit erat in ligula ornare lobortis. Morbi blandit dolor in ante faucibus rutrum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elit enim, pellentesque eget accumsan quis, condimentum a lectus. Maecenas ultrices augue eget pulvinar molestie. Curabitur mattis rhoncus vehicula. Quisque condimentum tempor tortor vel maximus. Etiam suscipit sapien a purus consequat, at luctus magna elementum. Donec nec metus rhoncus, rutrum magna et, eleifend neque.<p>
+
+          <p>Vestibulum vel tempor mauris, eget auctor lorem. Nunc vulputate nunc get tristique tempus. Suspendisse malesuada vehicula sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque semper metus in eros scelerisque condimentum. Phasellus in erat faucibus enim aliquam mattis quis vitae dolor. Vestibulum pretium tempus mi non consectetur. Etiam consequat, quam ut blandit porta, ante dui tristique massa, eget porta purus lorem quis ex. Integer pretium at ipsum eget condimentum.</p>
+
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam sollicitudin posuere dolor. Sed in leo vestibulum, pulvinar tortor id, iaculis sapien. Sed vel vestibulum enim, eget venenatis eros. Morbi in sapien vel diam vehicula posuere. Integer iaculis nisi vitae tortor finibus, ac elementum erat congue. Nam interdum ipsum et ligula laoreet, vitae vulputate velit venenatis. Nam orci tortor, euismod at turpis et, aliquet scelerisque augue. Donec commodo erat orci, eu convallis est ultricies ac.</p>
+
+          <p>Mauris ut tellus commodo leo faucibus fringilla fringilla in eros. Cras fermentum metus non lectus hendrerit fringilla. Duis vitae urna vestibulum, pretium odio quis, varius odio. Suspendisse condimentum urna id rutrum euismod. Aenean vel erat ullamcorper, aliquet augue pretium, condimentum arcu. Curabitur hendrerit dapibus magna, et molestie ex. Mauris non sodales enim. Nunc accumsan maximus tincidunt. Aenean pellentesque, dui et luctus pulvinar, mi enim vehicula augue, sit amet fermentum lorem orci sit amet ligula. Aenean euismod magna et mi accumsan fermentum. Sed lectus lorem, tempus sit amet libero a, dignissim dapibus lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam dictum dui nec tortor sollicitudin elementum. Vivamus et urna a erat elementum pretium. </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat enim vel tellus pellentesque pulvinar. Aenean vulputate lectus vitae dolor rhoncus fringilla. Vestibulum dapibus odio at sapien tristique, in eleifend odio commodo. Mauris faucibus sit amet elit placerat condimentum. Aenean a purus dignissim, suscipit sem non, vestibulum magna. Quisque a porta sem. Integer tempor augue arcu, et sollicitudin purus maximus ut. Ut blandit erat in ligula ornare lobortis. Morbi blandit dolor in ante faucibus rutrum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elit enim, pellentesque eget accumsan quis, condimentum a lectus. Maecenas ultrices augue eget pulvinar molestie. Curabitur mattis rhoncus vehicula. Quisque condimentum tempor tortor vel maximus. Etiam suscipit sapien a purus consequat, at luctus magna elementum. Donec nec metus rhoncus, rutrum magna et, eleifend neque.<p>
+
+          <p>Vestibulum vel tempor mauris, eget auctor lorem. Nunc vulputate nunc get tristique tempus. Suspendisse malesuada vehicula sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque semper metus in eros scelerisque condimentum. Phasellus in erat faucibus enim aliquam mattis quis vitae dolor. Vestibulum pretium tempus mi non consectetur. Etiam consequat, quam ut blandit porta, ante dui tristique massa, eget porta purus lorem quis ex. Integer pretium at ipsum eget condimentum.</p>
+
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam sollicitudin posuere dolor. Sed in leo vestibulum, pulvinar tortor id, iaculis sapien. Sed vel vestibulum enim, eget venenatis eros. Morbi in sapien vel diam vehicula posuere. Integer iaculis nisi vitae tortor finibus, ac elementum erat congue. Nam interdum ipsum et ligula laoreet, vitae vulputate velit venenatis. Nam orci tortor, euismod at turpis et, aliquet scelerisque augue. Donec commodo erat orci, eu convallis est ultricies ac.</p>
+
+          <p>Mauris ut tellus commodo leo faucibus fringilla fringilla in eros. Cras fermentum metus non lectus hendrerit fringilla. Duis vitae urna vestibulum, pretium odio quis, varius odio. Suspendisse condimentum urna id rutrum euismod. Aenean vel erat ullamcorper, aliquet augue pretium, condimentum arcu. Curabitur hendrerit dapibus magna, et molestie ex. Mauris non sodales enim. Nunc accumsan maximus tincidunt. Aenean pellentesque, dui et luctus pulvinar, mi enim vehicula augue, sit amet fermentum lorem orci sit amet ligula. Aenean euismod magna et mi accumsan fermentum. Sed lectus lorem, tempus sit amet libero a, dignissim dapibus lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam dictum dui nec tortor sollicitudin elementum. Vivamus et urna a erat elementum pretium. </p>
+
+        </div>
+
+
+      </div>
+    </div>
 
 
 
